--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-APP_NAME=Blog
+APP_NAME=myApp
+COMPOSE_PROJECT_NAME=glauciosouthier
 
-HOST_SERVER_NAME=blogServer
+HOST_SERVER_NAME=myApp
 
 # Use: docker.for.win.localhost | docker.for.mac.localhost | docker.for.linux.localhost
 HOST_IP=docker.for.linux.localhost
