--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
 version: '2'
-
+  
 services:
-#  nginx:
-#    container_name: nginx
-#    image: nginx:1.15.2
-#    restart: always
-#    ports:
-#     - '80:80'
-#    volumes:
-     # - '.:/var/www/html'
-#      - './docker/nginx/default.conf:/etc/nginx/conf.d/default.conf'
-#      - '/tmp/${APP_NAME}/nginx:/var/log/nginx'
-#      - "/var/log/apache2:/var/log/apache2"
-#    env_file:
-#      - '.env'
-#    networks:
-#      - app-network
-#    depends_on:
-#      - 'php7.2-fpm-oci8'
-
-
   php7.2-fpm-oci8:
     container_name: php7.2-fpm-oci8
     restart: always
@@ -44,7 +25,30 @@ services:
     networks:
       - app-network
 #    depends_on:
-# #    - 'mysql'
+#      - 'mysql'
+
+
+
+#  nginx:
+#    container_name: nginx
+#    image: nginx:1.15.2
+#    restart: always
+#    ports:
+#     - '80:80'
+#    volumes:
+     # - '.:/var/www/html'
+#      - './docker/nginx/default.conf:/etc/nginx/conf.d/default.conf'
+#      - '/tmp/${APP_NAME}/nginx:/var/log/nginx'
+#      - "/var/log/apache2:/var/log/apache2"
+#    env_file:
+#      - '.env'
+#    networks:
+#      - app-network
+#    depends_on:
+#      - 'php7.2-fpm-oci8'
+
+
+  
 
 #  postgresql:
 #    container_name: postgresql
