--- a/docker/xdebug/php-dev.ini
+++ b/docker/xdebug/php-dev.ini
@@ -4,12 +4,10 @@ max_execution_time = 30
 
 
 ; ------------- Xdebug -------------
-xdebug.default_enable = 1
-xdebug.remote_enable = 1
-xdebug.remote_autostart = 1
-xdebug.remote_connect_back = 1
-;xdebug.remote_host=172.17.0.1
-xdebug.remote_port = 9000
-xdebug.remote_handler = dbgp
-xdebug.remote_mode = req
-xdebug.remote_log = /var/log/xdebug/xdebug.log
+xdebug.mode=develop,coverage,debug
+xdebug.idekey=docker
+xdebug.start_with_request=yes
+xdebug.log=/var/log/xdebug/xdebug.log
+xdebug.log_level=0
+xdebug.discover_client_host=yes 
+xdebug.client_port = 9003
